--- a/MyOkashi/Base.lproj/Main.storyboard
+++ b/MyOkashi/Base.lproj/Main.storyboard
@@ -15,9 +15,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Zo9-Xb-sBY">
-                                <rect key="frame" x="0.0" y="44" width="414" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="Zo9-Xb-sBY">
+                                <rect key="frame" x="0.0" y="44" width="414" height="56"/>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="McP-LD-Der">
@@ -37,6 +36,11 @@
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="Zo9-Xb-sBY" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="88m-iH-MkL"/>
+                            <constraint firstItem="Zo9-Xb-sBY" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="VGG-q0-D0D"/>
+                            <constraint firstItem="Zo9-Xb-sBY" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="uAK-h2-E5j"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
